--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "rxjs": "~7.8.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -27,6 +28,7 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/smoothscroll-polyfill": "^0.3.3",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
