--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "lodash.merge": "^4.6.2",
+    "@types/lodash.merge": "^4.6.9",
     "@types/smoothscroll-polyfill": "^0.3.3",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.6.0",
