--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^16.2.0",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "date-fns": "^3.3.1",
     "ngx-mask": "^16.4.2",
     "rxjs": "~7.8.0",
     "smoothscroll-polyfill": "^0.4.4",
