--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run DashboardGeneral-v3:serve-ssr",
+    "serve:ssr": "node dist/DashboardGeneral-v3/server/main.js",
+    "build:ssr": "ng build && ng run DashboardGeneral-v3:server",
+    "prerender": "ng run DashboardGeneral-v3:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,11 +26,15 @@
     "@angular/material": "^16.2.13",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@angular/service-worker": "^16.2.0",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "@nguniversal/express-engine": "^16.2.0",
+    "compression": "^1.7.4",
     "date-fns": "^3.3.1",
+    "express": "^4.15.2",
     "ngx-mask": "^16.4.2",
     "rxjs": "~7.8.0",
     "smoothscroll-polyfill": "^0.4.4",
@@ -37,8 +45,12 @@
     "@angular-devkit/build-angular": "^16.2.10",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
+    "@nguniversal/builders": "^16.2.0",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash.merge": "^4.6.9",
+    "@types/node": "^16.11.7",
     "@types/smoothscroll-polyfill": "^0.3.3",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~4.6.0",
