--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,13 +1,14 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
+  "navigationRequestStrategy": "freshness",
   "assetGroups": [
     {
       "name": "app",
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon.ico",
+          "/assets/cactusdash-logo.png",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
